force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <label>Milestone</label>
    <nameField>
        <displayFormat>{MM}{YY}-{0000}</displayFormat>
        <label>Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>