force-app/main/default/objects/Milestone__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Dispute Case #</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>